out.txt
main.c: In function ‘main’:
main.c:402:39: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  402 |     TTWS_AddRoute(server, "GET", "/", handle);
      |                                       ^~~~~~
      |                                       |
      |                                       TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:403:51: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  403 |     TTWS_AddRoute(server, "GET", "/my_path/lol/", handle);
      |                                                   ^~~~~~
      |                                                   |
      |                                                   TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:404:54: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  404 |     TTWS_AddRoute(server, "GET", "/my_path/cheese/", handle);
      |                                                      ^~~~~~
      |                                                      |
      |                                                      TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:405:59: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  405 |     TTWS_AddRoute(server, "GET", "/my_path/cheese/gouda", handle);
      |                                                           ^~~~~~
      |                                                           |
      |                                                           TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:406:59: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  406 |     TTWS_AddRoute(server, "GET", "/my_path/cheese/fries", handle);
      |                                                           ^~~~~~
      |                                                           |
      |                                                           TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:407:51: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  407 |     TTWS_AddRoute(server, "GET", "/my_path/elmo", handle);
      |                                                   ^~~~~~
      |                                                   |
      |                                                   TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
main.c:408:50: error: passing argument 4 of ‘TTWS_AddRoute’ from incompatible pointer type [-Wincompatible-pointer-types]
  408 |     TTWS_AddRoute(server, "GET", "/the_jiggler", handle);
      |                                                  ^~~~~~
      |                                                  |
      |                                                  TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)
main.c:276:92: note: expected ‘RouteHandler’ {aka ‘void (*)(const TTWS_Request *, TTWS_Response *)’} but argument is of type ‘TTWS_Response * (*)(const TTWS_Request *, TTWS_Response *)’
  276 | void TTWS_AddRoute(TTWS_Server* server, const char* method, const char* path, RouteHandler handler) {
      |                                                                               ~~~~~~~~~~~~~^~~~~~~
